test/negative/405_when_nonbool.err
405_when_nonbool.fx:2:28: error: incorrect type of value 'a': expected='bool', actual='int'

1 errors occured during type checking.
